fix css bug: firefox下未对齐

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -85,11 +85,12 @@
       top: 0
       text-align: center
     span
+      position: absolute
+      display: block
       color: #36c
       text-align: center
       top: 33px
       width: 40px
-      position: absolute
     a
       @include hide_text
       width: 40px
