--- a/public/stylesheets/sitemap.sass
+++ b/public/stylesheets/sitemap.sass
@@ -41,6 +41,12 @@
       position: absolute
       top: 420px
       left: 320px
+    .contact
+      width: 100px
+      height: 60px
+      position: absolute
+      top: 330px
+      left: 650px
     .sub
       width: 80px
       height: 24px
@@ -65,6 +71,9 @@
     .sub_group
       top: 400px
       left: 230px
+    .sub_contact
+      top: 350px
+      left: 570px
   .note
     width: 212px
     height: 60px
@@ -98,6 +107,11 @@
     &.note_group
       top: 380px
       left: 10px
+    &.note_contact
+      top: 340px
+      left: 350px
+      .text
+        font-size: 12px
     &.right
       .text
         left: 12px
