--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,3 +2,8 @@
   2011 
   %a{href: "http://www.miibeian.gov.cn/"}
     京ICP备11016814
+
+  |
+  意见反馈:
+  %a{href: "mailto:#{contact_address}"}
+    = contact_address
