There should be blank in form for IE6/7

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -17,6 +17,7 @@
     padding: 0 20px 0 0
     border-right: 1px dashed #CADBEA
     position: relative
+    *padding-top: 20px
   .right
     width: 190px
     float: right
