Fix double margin for IE6, lots of 'em

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -92,7 +92,7 @@ span.suggestion
     margin-bottom: 30px
 
   .page_logo label
-    display: block
+    display: inline
     width: 60px
     height: 80px
     float: left
@@ -100,7 +100,7 @@ span.suggestion
     font-size: 14px
 
   .page_logo input
-    display: block
+    display: inline
     width: 200px
     float: left
     margin: 20px 30px
