--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -173,7 +173,8 @@ a.page_name
     border-radius: 5px
     margin: 20px
     float: left
-    
+    display: inline
+
     a
       @include size(60px, 60px)
       display: block
@@ -247,7 +248,7 @@ a.page_name
     padding-top: 45px
     padding-right: 5px
     a
-      display: block
+      display: inline
       width: 20px
       float: left
       text-decoration: none
