--- a/public/stylesheets/k_box.sass
+++ b/public/stylesheets/k_box.sass
@@ -12,6 +12,7 @@
       height: 14px
       margin: 8px 8px 0 0
       float: right
+      display: inline
       background: url('/images/icons.gif') -100px -20px
       overflow: hidden
       cursor: pointer
