--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -50,6 +50,7 @@
         line-height: 38px
         text-decoration: none
         float: left
+        display: inline
     .follow
       width: 24px
       height: 40px
