Webkit border radius should not be left behind

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -169,8 +169,7 @@ a.page_name
     background-image: url('/images/default_icon_medium.gif')
     background-repeat: no-repeat
     background-position: center
-    -moz-border-radius: 5px
-    border-radius: 5px
+    @include border-radius(5px)
     margin: 20px
     float: left
     display: inline
