--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -107,9 +107,7 @@
       .tag
         background-color: rgb(0, 0, 0)
         background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7) !important
-        -moz-border-radius: 10px
-        webkit-border-radius: 10px
-        border-radius: 10px
+        @include border-radius(10px)
         position: absolute
         bottom: 8px
         left: 8px
