Fix position of .author_arrow for IE7

--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -384,7 +384,8 @@
     position: absolute
     top: 32px
     left: 65px
-    *left: 66px
+    *left: 64px
+    _left: 66px
     @include size(13px, 13px)
 
   .writer_name
@@ -411,7 +412,8 @@
     background-image: url("/images/embed/arrow2.gif")
     border-right: 2px white solid
     left: 67px
-    *left: 68px
+    *left: 65px
+    _left: 68px
 
   .content
     padding: 0 16px
