Hide some stinky underline for IE6

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -324,6 +324,9 @@ a.page_name
     color: $light-gray
     text-decoration: none
 
+    &:hover
+      text-decoration: none
+
     &.selector
       background: url('/images/mypages_close_a.gif')
       color: $gray
