--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -13,6 +13,13 @@
   font-size: 14px
   position: relative
   overflow: hidden
+  .loading
+    width: 860px
+    height: 300px
+    position: absolute
+    top: 34px
+    left: 22px
+    background: url('/images/spinner.gif') no-repeat center
   .spread_banner
     width: 860px
     height: 300px
