Fix cursor on page selector on IE6/7

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -326,6 +326,7 @@ a.page_name
 
     &:hover
       text-decoration: none
+      *cursor: pointer
 
     &.selector
       background: url('/images/mypages_close_a.gif')
