--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -22,18 +22,11 @@
       height: 60px
       display: block
       text-decoration: none
-  .z_icon_s_outer
-    width: 36px
-    height: 36px
-    background: url('/images/embed/dash_icon_s.gif') no-repeat top left
-    overflow: hidden
-    position: absolute
-    top: 50px
-    left: 60px
   .z_icon_s
     width: 30px
     height: 30px
-    @include border-radius(5px)
+    border: 3px solid #7999dd
+    @include border-radius(10px)
     background: url('/images/default_icon_30.jpg') no-repeat 0 0
     overflow: hidden
     position: absolute
@@ -70,12 +63,12 @@
       font-size: 12px
       padding: 0 10px
       position: relative
-      bottom: -35px
+      bottom: -25px
   .z_container
     width: 200px
-    height: 50px
+    height: 40px
     position: absolute
-    bottom: 30px
+    bottom: 5px
     right: 0
     div
       width: 40px
@@ -87,45 +80,47 @@
     span
       position: absolute
       display: block
-      color: #36c
+      color: white
       text-align: center
-      top: 33px
+      top: 20px
       width: 40px
+      font-weight: bold
     a
       @include hide_text
-      width: 40px
-      height: 55px
+      width: 20px
+      height: 20px
       display: block
+      margin: 0 10px
     .z_following
       a
-        background: url('/images/embed/dash_follow_btn.gif') no-repeat top left
+        background: url('/images/embed/icon_follow.png') no-repeat top left
         &.highlight,
         &:hover
-          background: url('/images/embed/dash_follow_btn_hover.gif') no-repeat top left
+          background: url('/images/embed/icon_follow_hover.png') no-repeat top left
     .z_favor
       right: -50px
       top: -30px
       a
-        background: url('/images/embed/dash_collect_btn.gif') no-repeat top left
+        background: url('/images/embed/icon_collect.png') no-repeat top left
         &.highlight,
         &:hover
-          background: url('/images/embed/dash_collect_btn_hover.gif') no-repeat top left
+          background: url('/images/embed/icon_collect_hover.png') no-repeat top left
     .z_buzz
       right: -100px
       top: -60px
       a
-        background: url('/images/embed/dash_reply_btn.gif') no-repeat top left
+        background: url('/images/embed/icon_reply.png') no-repeat top left
         &.highlight,
         &:hover
-          background: url('/images/embed/dash_reply_btn_hover.gif') no-repeat top left
+          background: url('/images/embed/icon_reply_hover.png') no-repeat top left
     .z_message
       right: -150px
       top: -90px
       a
-        background: url('/images/embed/dash_message_btn.gif') no-repeat top left
+        background: url('/images/embed/icon_message.png') no-repeat top left
         &.highlight,
         &:hover
-          background: url('/images/embed/dash_message_btn_hover.gif') no-repeat top left
+          background: url('/images/embed/icon_message_hover.png') no-repeat top left
 
 .list_box
   border: 1px solid #cadbea
