--- a/app/views/layouts/_nav_user.html.haml
+++ b/app/views/layouts/_nav_user.html.haml
@@ -1,4 +1,5 @@
 .nav_user
+  .z_header
   .z_icon{style: "background-image:url(#{@user.primary_blog.icon.url_for(:medium)})"}<
     %a{href: blog_path(@user.primary_blog)}<
       &nbsp;
