--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -4,16 +4,24 @@
     cursor: pointer
     color: #3366cc
   height: 110px
-  width: 900px
-  background: url('/images/embed/dash_bg2.gif') no-repeat top left
-  overflow: hidden
   position: relative
   padding: 0
   color: #fff
+  .z_header
+    width: 900px
+    height: 45px
+    @include border-radius(8px)
+    background: url('/images/embed/dash_bg.png') no-repeat center
+    position: absolute
+    top: 60px
+    right: 0
+    left: 0
+    bottom: 0
+
   .z_icon
     @include size(60px, 60px)
-    background: url('/images/default_icon_60.jpg') no-repeat 0 0
-    @include border-radius(5px)
+    @include border-radius(10px)
+    border: 3px solid #7999dd
     position: absolute
     top: 12px
     left: 22px
@@ -27,7 +35,6 @@
     height: 30px
     border: 3px solid #7999dd
     @include border-radius(10px)
-    background: url('/images/default_icon_30.jpg') no-repeat 0 0
     overflow: hidden
     position: absolute
     top: 53px
